tests/errors/math_pow_negative_panics.ptt
use std/math

spark {
  yell(math.pow(2, -1))
}
